# claudecade

./: .gitignore  CASE_STUDY.md  CLAUDECADE_UPDATE_SETUP.md  CLEANUP_COMMENTS_ASSESSMENT.md  CLEANUP_CYCLES_ASSESSMENT.md  CLEANUP_DEDUP_ASSESSMENT.md  CLEANUP_TRYCATCH_ASSESSMENT.md  CLEANUP_TYPES_ASSESSMENT.md  CLEANUP_TYPES_STRONG_ASSESSMENT.md  CLEANUP_UNUSED_ASSESSMENT.md  GITHUB_SETUP.md  ascii-font-design.txt  build-claudcade.py  claudcade.py  claudcade_engine.py  claudcade_mcp.py  claudcade_scores.py  claudecadeupdate  claudemon.py  claudtra.py  claudturismo.py  ctype.py  fight.html  fight.py  finalclaudesy.py  launch_claudcade.sh  launch_claudemon.sh  launch_claudtra.sh  launch_claudturismo.sh  launch_ctype.sh  launch_fight.sh  launch_finalclaudesy.sh  launch_superclaudio.sh  pyproject.toml  superclaudio.py
claudcade-engine/: .gitignore  README.md  claudcade.py  claudcade_engine.py  claudcade_mcp.py  claudcade_scores.py  claudefield.py  claudemon.py  claudtra.py  claudturismo.py  ctype.py  fight.py  finalclaudesy  finalclaudesy.py  superclaudio.py
claudcade-engine/claudemon/: battle.py  data.py  entities.py  main.py  world.py
claudcade-engine/examples/: hello_world.py
claudcade-engine/finalclaudesy/: battle.py  data.py  entities.py  explore.py  main.py  ui.py
claudcade-site/: .env.example  ASCII_ART_LIBRARY.txt  CLAUDECADE_FONT.txt  CLAUDECADE_FONT_CLEAN.txt  CLAUDECADE_FONT_DOTS.txt  CLAUDECADE_FONT_GRADIENT.txt  CLAUDECADE_FONT_OUTLINE.txt  CLAUDECADE_FONT_OUTLINE_DOT.txt  CLAUDECADE_FONT_SHADOW.txt  CLAUDECADE_FONT_STRIPED_H.txt  CLAUDECADE_FONT_STRIPED_V.txt  CLAUDECADE_FONT_THIN_SHADOW.txt  ascii-font-i-p.txt  ascii_font_a-h.txt  ascii_font_q_x.txt  build-font-variants.py  build-font.py  font-builder.html  font-test.html  netlify.toml  package-lock.json  package.json  screenshot-font.js  screenshot-fonttest.js  screenshot.js
claudcade-site/public/: main.js  (+13 more)
claudegames/: __init__.py  server.py
finalclaudesy/: __init__.py  battle.py  data.py  entities.py  explore.py  main.py  ui.py
tests/: pty_test.py  smoke_test.py  sprite_validator.py  test_engine.py  test_save_and_scores.py
(+9 files in other folders)
